# gapple

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEVLOG.md  Dockerfile  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2ea78e16f91f_initial_schema.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  calendar.py  credentials.py  event_snapshot.py  sync_log.py  sync_pair.py  user.py
backend/app/routers/: auth.py  calendars.py  icloud.py  sync.py  sync_pairs.py
backend/app/services/: encryption.py
backend/tests/: conftest.py  test_encryption.py  test_models.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: main.ts
frontend/src/api/: client.ts
frontend/src/types/: index.ts
frontend/src/views/: Home.vue
